@@ -317,6 +317,9 @@ Release 2.1.0-beta - UNRELEASED
     YARN-692. Creating NMToken master key on RM and sharing it with NM as a part
     of RM-NM heartbeat. (Omkar Vinit Joshi via vinodkv)
 
+    YARN-782. vcores-pcores ratio functions differently from vmem-pmem ratio in 
+    misleading way. (sandyr via tucu)
+
   OPTIMIZATIONS
 
     YARN-512. Log aggregation root directory check is more expensive than it
